(myntra-app-round-trip-website): Styling changes

--- a/map-round-trip/public/index.html
+++ b/map-round-trip/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Demo: Generate an optimized route with the Optimization API</title>
+    <title>One Day Round Trip</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -40,11 +40,11 @@
     <div class="container" style="margin: 0;">
       <div class="navbar">
         <nav style="background-color:rgba(43, 42, 40, 0.521); height: 30px; padding: 20px; border-radius: 0px 0px 30px 30px;">
-          
+          <a href="" style="color: rgb(255, 255, 255); font-weight: bold; font-size: xx-large; font-family: monospace; text-decoration: none;">Maps Round Trip</a>
         </nav>
       </div>
       <div style="align-items: center;">
-        <div style="margin: 20px; width:500px; height: 500px;" id="map" ></div>
+        <div style="margin: 20px; width:100%; height: 100%; margin-top: 100px;" id="map" ></div>
       </div>
     </div>
     <script>
